bindings/go/slatedb.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
void* uniffi_slatedb_ffi_fn_clone_db(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_db(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_db_begin(void* ptr, RustBuffer isolation_level
);
uint64_t uniffi_slatedb_ffi_fn_method_db_delete(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_db_delete_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_flush(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_db_flush_with_options(void* ptr, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_db_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_db_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_merge(void* ptr, RustBuffer key, RustBuffer operand
);
uint64_t uniffi_slatedb_ffi_fn_method_db_merge_with_options(void* ptr, RustBuffer key, RustBuffer operand, RustBuffer merge_options, RustBuffer write_options
);
RustBuffer uniffi_slatedb_ffi_fn_method_db_metrics(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_db_put(void* ptr, RustBuffer key, RustBuffer value
);
uint64_t uniffi_slatedb_ffi_fn_method_db_put_with_options(void* ptr, RustBuffer key, RustBuffer value, RustBuffer put_options, RustBuffer write_options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_db_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_db_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_shutdown(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_db_snapshot(void* ptr
);
void uniffi_slatedb_ffi_fn_method_db_status(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_db_write(void* ptr, RustBuffer operations
);
uint64_t uniffi_slatedb_ffi_fn_method_db_write_batch(void* ptr, void* batch
);
uint64_t uniffi_slatedb_ffi_fn_method_db_write_batch_with_options(void* ptr, void* batch, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_db_write_with_options(void* ptr, RustBuffer operations, RustBuffer options
);
void* uniffi_slatedb_ffi_fn_clone_dbbuilder(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_dbbuilder(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_dbbuilder_new(RustBuffer path, void* object_store, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbbuilder_build(void* ptr
);
void uniffi_slatedb_ffi_fn_method_dbbuilder_with_db_cache_disabled(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_dbbuilder_with_merge_operator(void* ptr, uint64_t merge_operator, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_dbbuilder_with_seed(void* ptr, uint64_t seed, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_dbbuilder_with_settings_json(void* ptr, RustBuffer settings_json, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_dbbuilder_with_sst_block_size(void* ptr, RustBuffer sst_block_size, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_dbbuilder_with_wal_object_store(void* ptr, void* wal_object_store, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_dbiterator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_dbiterator(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbiterator_next(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_dbiterator_seek(void* ptr, RustBuffer key
);
void* uniffi_slatedb_ffi_fn_clone_dbreader(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_dbreader(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreader_close(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreader_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreader_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreader_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreader_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreader_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreader_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
void* uniffi_slatedb_ffi_fn_clone_dbreaderbuilder(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_dbreaderbuilder(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_dbreaderbuilder_new(RustBuffer path, void* object_store, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbreaderbuilder_build(void* ptr
);
void uniffi_slatedb_ffi_fn_method_dbreaderbuilder_with_checkpoint_id(void* ptr, RustBuffer checkpoint_id, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_dbreaderbuilder_with_options(void* ptr, RustBuffer options, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_dbsnapshot(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_dbsnapshot(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbsnapshot_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
void* uniffi_slatedb_ffi_fn_clone_dbtransaction(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_dbtransaction(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_commit(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_commit_with_options(void* ptr, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_delete(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_get(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_get_key_value(void* ptr, RustBuffer key
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_get_key_value_with_options(void* ptr, RustBuffer key, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_get_with_options(void* ptr, RustBuffer key, RustBuffer options
);
RustBuffer uniffi_slatedb_ffi_fn_method_dbtransaction_id(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_mark_read(void* ptr, RustBuffer keys
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_merge(void* ptr, RustBuffer key, RustBuffer operand
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_merge_with_options(void* ptr, RustBuffer key, RustBuffer operand, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_put(void* ptr, RustBuffer key, RustBuffer value
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_put_with_options(void* ptr, RustBuffer key, RustBuffer value, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_rollback(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_scan(void* ptr, RustBuffer range
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_scan_prefix(void* ptr, RustBuffer prefix
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_scan_prefix_with_options(void* ptr, RustBuffer prefix, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_scan_with_options(void* ptr, RustBuffer range, RustBuffer options
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_seqnum(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_dbtransaction_unmark_write(void* ptr, RustBuffer keys
);
void* uniffi_slatedb_ffi_fn_clone_objectstore(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_objectstore(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_walfile(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_walfile(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_walfile_close(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_walfile_id(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_walfile_iterator(void* ptr
);
uint64_t uniffi_slatedb_ffi_fn_method_walfile_metadata(void* ptr
);
void* uniffi_slatedb_ffi_fn_method_walfile_next_file(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_walfile_next_id(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_clone_walfileiterator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_walfileiterator(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_walfileiterator_close(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_walfileiterator_next(void* ptr
);
void* uniffi_slatedb_ffi_fn_clone_walreader(void* ptr, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_free_walreader(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_constructor_walreader_new(RustBuffer path, void* object_store, RustCallStatus *out_status
);
void uniffi_slatedb_ffi_fn_method_walreader_close(void* ptr, RustCallStatus *out_status
);
void* uniffi_slatedb_ffi_fn_method_walreader_get(void* ptr, uint64_t id, RustCallStatus *out_status
);
uint64_t uniffi_slatedb_ffi_fn_method_walreader_list(void* ptr, RustBuffer start_id, RustBuffer end_id
);