bindings/java/src/main/java/io/slatedb/UniffiLib.java

    
    Pointer uniffi_slatedb_ffi_fn_clone_db(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_db(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_db_begin(Pointer ptr, RustBuffer.ByValue isolationLevel);
    Long uniffi_slatedb_ffi_fn_method_db_delete(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_db_delete_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_db_flush(Pointer ptr);
    Long uniffi_slatedb_ffi_fn_method_db_flush_with_options(Pointer ptr, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_db_get(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_db_get_key_value(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_db_get_key_value_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_db_get_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_db_merge(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand);
    Long uniffi_slatedb_ffi_fn_method_db_merge_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand, RustBuffer.ByValue mergeOptions, RustBuffer.ByValue writeOptions);
    RustBuffer.ByValue uniffi_slatedb_ffi_fn_method_db_metrics(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_db_put(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value);
    Long uniffi_slatedb_ffi_fn_method_db_put_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value, RustBuffer.ByValue putOptions, RustBuffer.ByValue writeOptions);
    Long uniffi_slatedb_ffi_fn_method_db_scan(Pointer ptr, RustBuffer.ByValue range);
    Long uniffi_slatedb_ffi_fn_method_db_scan_prefix(Pointer ptr, RustBuffer.ByValue prefix);
    Long uniffi_slatedb_ffi_fn_method_db_scan_prefix_with_options(Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_db_scan_with_options(Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_db_shutdown(Pointer ptr);
    Long uniffi_slatedb_ffi_fn_method_db_snapshot(Pointer ptr);
    void uniffi_slatedb_ffi_fn_method_db_status(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_db_write(Pointer ptr, RustBuffer.ByValue operations);
    Long uniffi_slatedb_ffi_fn_method_db_write_batch(Pointer ptr, Pointer batch);
    Long uniffi_slatedb_ffi_fn_method_db_write_batch_with_options(Pointer ptr, Pointer batch, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_db_write_with_options(Pointer ptr, RustBuffer.ByValue operations, RustBuffer.ByValue options);
    Pointer uniffi_slatedb_ffi_fn_clone_dbbuilder(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_dbbuilder(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_constructor_dbbuilder_new(RustBuffer.ByValue path, Pointer objectStore, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbbuilder_build(Pointer ptr);
    void uniffi_slatedb_ffi_fn_method_dbbuilder_with_db_cache_disabled(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_dbbuilder_with_merge_operator(Pointer ptr, Long mergeOperator, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_dbbuilder_with_seed(Pointer ptr, Long seed, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_dbbuilder_with_settings_json(Pointer ptr, RustBuffer.ByValue settingsJson, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_dbbuilder_with_sst_block_size(Pointer ptr, RustBuffer.ByValue sstBlockSize, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_dbbuilder_with_wal_object_store(Pointer ptr, Pointer walObjectStore, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_clone_dbiterator(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_dbiterator(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbiterator_next(Pointer ptr);
    Long uniffi_slatedb_ffi_fn_method_dbiterator_seek(Pointer ptr, RustBuffer.ByValue key);
    Pointer uniffi_slatedb_ffi_fn_clone_dbreader(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_dbreader(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbreader_close(Pointer ptr);
    Long uniffi_slatedb_ffi_fn_method_dbreader_get(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_dbreader_get_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbreader_scan(Pointer ptr, RustBuffer.ByValue range);
    Long uniffi_slatedb_ffi_fn_method_dbreader_scan_prefix(Pointer ptr, RustBuffer.ByValue prefix);
    Long uniffi_slatedb_ffi_fn_method_dbreader_scan_prefix_with_options(Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbreader_scan_with_options(Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);
    Pointer uniffi_slatedb_ffi_fn_clone_dbreaderbuilder(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_dbreaderbuilder(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_constructor_dbreaderbuilder_new(RustBuffer.ByValue path, Pointer objectStore, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbreaderbuilder_build(Pointer ptr);
    void uniffi_slatedb_ffi_fn_method_dbreaderbuilder_with_checkpoint_id(Pointer ptr, RustBuffer.ByValue checkpointId, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_dbreaderbuilder_with_options(Pointer ptr, RustBuffer.ByValue options, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_clone_dbsnapshot(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_dbsnapshot(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_get(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_get_key_value(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_get_key_value_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_get_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_scan(Pointer ptr, RustBuffer.ByValue range);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_scan_prefix(Pointer ptr, RustBuffer.ByValue prefix);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_scan_prefix_with_options(Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbsnapshot_scan_with_options(Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);
    Pointer uniffi_slatedb_ffi_fn_clone_dbtransaction(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_dbtransaction(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_commit(Pointer ptr);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_commit_with_options(Pointer ptr, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_delete(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_get(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_get_key_value(Pointer ptr, RustBuffer.ByValue key);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_get_key_value_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_get_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue options);
    RustBuffer.ByValue uniffi_slatedb_ffi_fn_method_dbtransaction_id(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_mark_read(Pointer ptr, RustBuffer.ByValue keys);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_merge(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_merge_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue operand, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_put(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_put_with_options(Pointer ptr, RustBuffer.ByValue key, RustBuffer.ByValue value, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_rollback(Pointer ptr);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_scan(Pointer ptr, RustBuffer.ByValue range);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_scan_prefix(Pointer ptr, RustBuffer.ByValue prefix);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_scan_prefix_with_options(Pointer ptr, RustBuffer.ByValue prefix, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_scan_with_options(Pointer ptr, RustBuffer.ByValue range, RustBuffer.ByValue options);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_seqnum(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_dbtransaction_unmark_write(Pointer ptr, RustBuffer.ByValue keys);
    Pointer uniffi_slatedb_ffi_fn_clone_objectstore(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_objectstore(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_clone_walfile(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_walfile(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_walfile_close(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_walfile_id(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_walfile_iterator(Pointer ptr);
    Long uniffi_slatedb_ffi_fn_method_walfile_metadata(Pointer ptr);
    Pointer uniffi_slatedb_ffi_fn_method_walfile_next_file(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_walfile_next_id(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_clone_walfileiterator(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_walfileiterator(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_walfileiterator_close(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_walfileiterator_next(Pointer ptr);
    Pointer uniffi_slatedb_ffi_fn_clone_walreader(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_free_walreader(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_constructor_walreader_new(RustBuffer.ByValue path, Pointer objectStore, UniffiRustCallStatus uniffi_out_errmk);
    void uniffi_slatedb_ffi_fn_method_walreader_close(Pointer ptr, UniffiRustCallStatus uniffi_out_errmk);
    Pointer uniffi_slatedb_ffi_fn_method_walreader_get(Pointer ptr, Long id, UniffiRustCallStatus uniffi_out_errmk);
    Long uniffi_slatedb_ffi_fn_method_walreader_list(Pointer ptr, RustBuffer.ByValue startId, RustBuffer.ByValue endId);
